# nosql-simulator

./: .gitignore  INSTRUCTIONS.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_multi_refs.py  0003_lesson_completions.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  builder.py  courses.py  health.py  me.py  tasks.py  teacher.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: __init__.py  migrations.py
backend/app/models/: __init__.py  achievement.py  course.py  submission.py  user.py
backend/app/sandbox/: cassandra_runner.py  cql_parser.py  cypher_parser.py  dispatch.py  mongo_runner.py  mql_parser.py  neo4j_runner.py  redis_parser.py  redis_runner.py
backend/app/schemas/: admin.py  auth.py  builder.py  course.py  dashboard.py  submission.py  teacher.py
backend/scripts/: lessons_content.sql  seed.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_complete_lesson.py  test_courses.py  test_health.py  test_progress.py  test_submit.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx
frontend/src/hooks/: useAdmin.ts  useAuth.ts  useBuilder.ts  useCourses.ts  useMe.ts  useTask.ts  useTeacher.ts
frontend/src/lib/: api.ts  nosqlType.ts  types.ts
frontend/src/pages/: AdminUsersPage.tsx  BuilderCoursePage.tsx  BuilderPage.tsx  CoursePage.tsx  (+12 more)
(+2 files in other folders)
